# dart_json_annotations

./: .gitignore  .pubignore  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  COMPARISON.md  FEATURE_ROADMAP.md  LICENSE  Makefile  README.md  analysis_options.yaml  benchmark.sh  comprehensive_benchmark.sh  cursor_migration_plan_for_rust_backed_s.md  dart_json_gen.yaml.example  events.txt  freezed_docs.md  mkdocs.yml  pubspec.yaml  requirements.txt  test.dart  test2.dart  union_arch.md
.dart_tool/: package_config.json  package_graph.json
.github/workflows/: docs-preview.yml  docs.yml
codegen/: .gitignore  Cargo.toml
codegen/src/: cli.rs  main.rs  processor.rs  utils.rs
codegen/src/generator/: mod.rs  utils.rs
codegen/src/generator/dart/: classes.rs  mod.rs
codegen/src/generator/dart/json/: classes.rs  fields.rs  mod.rs
codegen/src/generator/dart/union/: extension.rs  mod.rs  serializer.rs
codegen/src/models/: dart_class.rs  dart_field.rs  dart_type.rs  enums.rs  mod.rs
codegen/src/parser/: annotations.rs  comments.rs  fields.rs  mod.rs  params.rs  patterns.rs
docs/: .gitignore  DEPLOYMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Makefile  README.md  api-reference.md  examples.md  getting-started.md  index.md  main-guide.md  performance.md  vscode-extension.md
examples/: .gitignore  EXTENSION_CONFIG.md  FEATURES.md  dart_json_gen.yaml  pubspec.yaml
examples/lib/: main.dart
examples/test/: serialization_test.dart
extensions/vscode/: CHANGELOG.md  README.md  SETUP.md  TROUBLESHOOTING.md  package.json
lib/: dart_json_annotations.dart
(+95 files in other folders)
