[package]
name = "dart_json_gen"
version = "2.0.1"
edition = "2021"
description = "Rust-powered code generator for Dart models - JSON, copyWith, equatable, unions"
authors = ["Your Name"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# File system operations
walkdir = "2.4"

# Regex for parsing
regex = "1.10"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Colored terminal output
colored = "2.1"

# Parallel processing
rayon = "1.10"

# Lazy static for regex compilation
lazy_static = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
